; ModuleID = '/home/carl/AnghaBench/git/extr_archive.c_write_directory.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive.c_write_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archiver_context = type { %struct.directory* }
%struct.directory = type { i8*, i32, i32, i32, i32, i32, %struct.directory* }

@READ_TREE_RECURSIVE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archiver_context*)* @write_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_directory(%struct.archiver_context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.archiver_context*, align 8
  %4 = alloca %struct.directory*, align 8
  %5 = alloca i32, align 4
  store %struct.archiver_context* %0, %struct.archiver_context** %3, align 8
  %6 = load %struct.archiver_context*, %struct.archiver_context** %3, align 8
  %7 = getelementptr inbounds %struct.archiver_context, %struct.archiver_context* %6, i32 0, i32 0
  %8 = load %struct.directory*, %struct.directory** %7, align 8
  store %struct.directory* %8, %struct.directory** %4, align 8
  %9 = load %struct.directory*, %struct.directory** %4, align 8
  %10 = icmp ne %struct.directory* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %66

12:                                               ; preds = %1
  %13 = load %struct.directory*, %struct.directory** %4, align 8
  %14 = getelementptr inbounds %struct.directory, %struct.directory* %13, i32 0, i32 6
  %15 = load %struct.directory*, %struct.directory** %14, align 8
  %16 = load %struct.archiver_context*, %struct.archiver_context** %3, align 8
  %17 = getelementptr inbounds %struct.archiver_context, %struct.archiver_context* %16, i32 0, i32 0
  store %struct.directory* %15, %struct.directory** %17, align 8
  %18 = load %struct.directory*, %struct.directory** %4, align 8
  %19 = getelementptr inbounds %struct.directory, %struct.directory* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = load %struct.directory*, %struct.directory** %4, align 8
  %22 = getelementptr inbounds %struct.directory, %struct.directory* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = sub nsw i32 %23, 1
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %20, i64 %25
  store i8 0, i8* %26, align 1
  %27 = load %struct.archiver_context*, %struct.archiver_context** %3, align 8
  %28 = call i32 @write_directory(%struct.archiver_context* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %57, label %30

30:                                               ; preds = %12
  %31 = load %struct.directory*, %struct.directory** %4, align 8
  %32 = getelementptr inbounds %struct.directory, %struct.directory* %31, i32 0, i32 5
  %33 = load %struct.directory*, %struct.directory** %4, align 8
  %34 = getelementptr inbounds %struct.directory, %struct.directory* %33, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  %36 = load %struct.directory*, %struct.directory** %4, align 8
  %37 = getelementptr inbounds %struct.directory, %struct.directory* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.directory*, %struct.directory** %4, align 8
  %40 = getelementptr inbounds %struct.directory, %struct.directory* %39, i32 0, i32 0
  %41 = load i8*, i8** %40, align 8
  %42 = load %struct.directory*, %struct.directory** %4, align 8
  %43 = getelementptr inbounds %struct.directory, %struct.directory* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %41, i64 %45
  %47 = load %struct.directory*, %struct.directory** %4, align 8
  %48 = getelementptr inbounds %struct.directory, %struct.directory* %47, i32 0, i32 4
  %49 = load i32, i32* %48, align 4
  %50 = load %struct.directory*, %struct.directory** %4, align 8
  %51 = getelementptr inbounds %struct.directory, %struct.directory* %50, i32 0, i32 3
  %52 = load i32, i32* %51, align 8
  %53 = load %struct.archiver_context*, %struct.archiver_context** %3, align 8
  %54 = call i64 @write_archive_entry(i32* %32, i8* %35, i32 %38, i8* %46, i32 %49, i32 %52, %struct.archiver_context* %53)
  %55 = load i64, i64* @READ_TREE_RECURSIVE, align 8
  %56 = icmp ne i64 %54, %55
  br label %57

57:                                               ; preds = %30, %12
  %58 = phi i1 [ true, %12 ], [ %56, %30 ]
  %59 = zext i1 %58 to i32
  store i32 %59, i32* %5, align 4
  %60 = load %struct.directory*, %struct.directory** %4, align 8
  %61 = call i32 @free(%struct.directory* %60)
  %62 = load i32, i32* %5, align 4
  %63 = icmp ne i32 %62, 0
  %64 = zext i1 %63 to i64
  %65 = select i1 %63, i32 -1, i32 0
  store i32 %65, i32* %2, align 4
  br label %66

66:                                               ; preds = %57, %11
  %67 = load i32, i32* %2, align 4
  ret i32 %67
}

declare dso_local i64 @write_archive_entry(i32*, i8*, i32, i8*, i32, i32, %struct.archiver_context*) #1

declare dso_local i32 @free(%struct.directory*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
